@@ -1555,6 +1555,7 @@ battery=This is only here for future updates, if i only wanted one type of batte
 
 [equipment-name]
 pm-solar-panel-equipment-2=Solar panel equipment MK2
+pm-solar-panel-equipment-3=Solar panel equipment MK3
 pm-personal-robocharger-equipment=Personal robocharger equipment
 pm-personal-robocharger-mk2-equipment=Personal robocharger MK2 equipment
 pm-personal-robostasher-equipment=Personal robostasher equipment
